--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "apexcharts": "^4.3.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
@@ -10,6 +11,7 @@
     "chartjs-chart-financial": "^0.2.1",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-chartjs-2": "^5.3.0",
@@ -17,7 +19,6 @@
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.0",
-    "sass": "^1.83.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^4.2.4"
@@ -45,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.83.4",
+    "sass-loader": "^16.0.4"
   }
 }
